--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "7.2.96" !default;
+$mdi-version:          "7.3.67" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -68,6 +68,10 @@ $mdi-icons: (
   "account-edit-outline": F0FFB,
   "account-eye": F0420,
   "account-eye-outline": F127B,
+  "account-file": F1CA7,
+  "account-file-outline": F1CA8,
+  "account-file-text": F1CA9,
+  "account-file-text-outline": F1CAA,
   "account-filter": F0936,
   "account-filter-outline": F0F9D,
   "account-group": F0849,
@@ -556,6 +560,8 @@ $mdi-icons: (
   "arrow-left-thin-circle-outline": F159A,
   "arrow-left-top": F17A7,
   "arrow-left-top-bold": F17A8,
+  "arrow-oscillating": F1C91,
+  "arrow-oscillating-off": F1C92,
   "arrow-projectile": F1840,
   "arrow-projectile-multiple": F183F,
   "arrow-right": F0054,
@@ -727,6 +733,8 @@ $mdi-icons: (
   "bag-personal-off": F0E11,
   "bag-personal-off-outline": F0E12,
   "bag-personal-outline": F0E13,
+  "bag-personal-plus": F1CA4,
+  "bag-personal-plus-outline": F1CA5,
   "bag-personal-tag": F1B0C,
   "bag-personal-tag-outline": F1B0D,
   "bag-suitcase": F158B,
@@ -1226,9 +1234,11 @@ $mdi-icons: (
   "bus-multiple": F0F3F,
   "bus-school": F079F,
   "bus-side": F07A0,
+  "bus-sign": F1CC1,
   "bus-stop": F1012,
   "bus-stop-covered": F1013,
   "bus-stop-uncovered": F1014,
+  "bus-wrench": F1CC2,
   "butterfly": F1589,
   "butterfly-outline": F158A,
   "button-cursor": F1B4F,
@@ -1408,6 +1418,7 @@ $mdi-icons: (
   "car-defrost-rear": F0D62,
   "car-door": F0B6B,
   "car-door-lock": F109D,
+  "car-door-lock-open": F1C81,
   "car-electric": F0B6C,
   "car-electric-outline": F15B5,
   "car-emergency": F160F,
@@ -1526,6 +1537,7 @@ $mdi-icons: (
   "cash-100": F0115,
   "cash-check": F14EE,
   "cash-clock": F1A91,
+  "cash-edit": F1CAB,
   "cash-fast": F185C,
   "cash-lock": F14EA,
   "cash-lock-open": F14EB,
@@ -1589,6 +1601,7 @@ $mdi-icons: (
   "chair-school": F0125,
   "chandelier": F1793,
   "charity": F0C4F,
+  "charity-search": F1C82,
   "chart-arc": F0126,
   "chart-areaspline": F0127,
   "chart-areaspline-variant": F0E91,
@@ -1913,6 +1926,8 @@ $mdi-icons: (
   "cloud-cog-outline": F1BF1,
   "cloud-download": F0162,
   "cloud-download-outline": F0B7D,
+  "cloud-key": F1CA1,
+  "cloud-key-outline": F1CA2,
   "cloud-lock": F11F1,
   "cloud-lock-open": F1BF2,
   "cloud-lock-open-outline": F1BF3,
@@ -1950,6 +1965,10 @@ $mdi-icons: (
   "coach-lamp-variant": F1A37,
   "coat-rack": F109E,
   "code-array": F0168,
+  "code-block-braces": F1C83,
+  "code-block-brackets": F1C84,
+  "code-block-parentheses": F1C85,
+  "code-block-tags": F1C86,
   "code-braces": F0169,
   "code-braces-box": F10D6,
   "code-brackets": F016A,
@@ -2471,6 +2490,7 @@ $mdi-icons: (
   "donkey": F07C2,
   "door": F081A,
   "door-closed": F081B,
+  "door-closed-cancel": F1C93,
   "door-closed-lock": F10AF,
   "door-open": F081C,
   "door-sliding": F181E,
@@ -2530,7 +2550,10 @@ $mdi-icons: (
   "earbuds-off-outline": F1851,
   "earbuds-outline": F1852,
   "earth": F01E7,
+  "earth-arrow-down": F1C87,
+  "earth-arrow-left": F1C88,
   "earth-arrow-right": F1311,
+  "earth-arrow-up": F1C89,
   "earth-box": F06CD,
   "earth-box-minus": F1407,
   "earth-box-off": F06CE,
@@ -2634,11 +2657,17 @@ $mdi-icons: (
   "emoticon-kiss-outline": F0C73,
   "emoticon-lol": F1214,
   "emoticon-lol-outline": F1215,
+  "emoticon-minus": F1CB2,
+  "emoticon-minus-outline": F1CB3,
   "emoticon-neutral": F0C74,
   "emoticon-neutral-outline": F01F6,
   "emoticon-outline": F01F2,
+  "emoticon-plus": F1CB4,
+  "emoticon-plus-outline": F1CB5,
   "emoticon-poop": F01F7,
   "emoticon-poop-outline": F0C75,
+  "emoticon-remove": F1CB6,
+  "emoticon-remove-outline": F1CB7,
   "emoticon-sad": F0C76,
   "emoticon-sad-outline": F01F8,
   "emoticon-sick": F157C,
@@ -2698,6 +2727,7 @@ $mdi-icons: (
   "eye-check-outline": F0D05,
   "eye-circle": F0B94,
   "eye-circle-outline": F0B95,
+  "eye-closed": F1CA3,
   "eye-lock": F1C06,
   "eye-lock-open": F1C07,
   "eye-lock-open-outline": F1C08,
@@ -2977,6 +3007,7 @@ $mdi-icons: (
   "fire-hydrant-alert": F1138,
   "fire-hydrant-off": F1139,
   "fire-off": F1722,
+  "fire-station": F1CC3,
   "fire-truck": F08AB,
   "firebase": F0967,
   "firefox": F0239,
@@ -3418,6 +3449,8 @@ $mdi-icons: (
   "gas-burner": F1A1B,
   "gas-cylinder": F0647,
   "gas-station": F0298,
+  "gas-station-in-use": F1CC4,
+  "gas-station-in-use-outline": F1CC5,
   "gas-station-off": F1409,
   "gas-station-off-outline": F140A,
   "gas-station-outline": F0EB8,
@@ -3446,6 +3479,9 @@ $mdi-icons: (
   "gender-male-female-variant": F113F,
   "gender-non-binary": F1140,
   "gender-transgender": F029F,
+  "generator-mobile": F1C8A,
+  "generator-portable": F1C8B,
+  "generator-stationary": F1C8C,
   "gentoo": F08E8,
   "gesture": F07CB,
   "gesture-double-tap": F073C,
@@ -3681,6 +3717,7 @@ $mdi-icons: (
   "heart-pulse": F05F6,
   "heart-remove": F1430,
   "heart-remove-outline": F1433,
+  "heart-search": F1C8D,
   "heart-settings": F1665,
   "heart-settings-outline": F1666,
   "heat-pump": F1A43,
@@ -3805,7 +3842,10 @@ $mdi-icons: (
   "hospital-building": F02E1,
   "hospital-marker": F02E2,
   "hot-tub": F0828,
+  "hours-12": F1C94,
   "hours-24": F1478,
+  "hub": F1C95,
+  "hub-outline": F1C96,
   "hubspot": F0D17,
   "hulu": F0829,
   "human": F02E6,
@@ -3820,6 +3860,7 @@ $mdi-icons: (
   "human-female-boy": F0A59,
   "human-female-dance": F15C9,
   "human-female-female": F0A5A,
+  "human-female-female-child": F1C8E,
   "human-female-girl": F0A5B,
   "human-greeting": F17C4,
   "human-greeting-proximity": F159D,
@@ -3837,6 +3878,7 @@ $mdi-icons: (
   "human-male-height": F0EFB,
   "human-male-height-variant": F0EFC,
   "human-male-male": F0A5E,
+  "human-male-male-child": F1C8F,
   "human-non-binary": F1848,
   "human-pregnant": F05CF,
   "human-queue": F1571,
@@ -3960,6 +4002,7 @@ $mdi-icons: (
   "iron-board": F1838,
   "iron-outline": F1825,
   "island": F104F,
+  "island-variant": F1CC6,
   "iv-bag": F10B9,
   "jabber": F0DD5,
   "jeepney": F0302,
@@ -4200,6 +4243,9 @@ $mdi-icons: (
   "link-box-outline": F0D1B,
   "link-box-variant": F0D1C,
   "link-box-variant-outline": F0D1D,
+  "link-circle": F1CAC,
+  "link-circle-outline": F1CAD,
+  "link-edit": F1CAE,
   "link-lock": F10BA,
   "link-off": F0338,
   "link-plus": F0C94,
@@ -4374,9 +4420,11 @@ $mdi-icons: (
   "medication-outline": F1B15,
   "meditation": F117B,
   "memory": F035B,
+  "memory-arrow-down": F1CA6,
   "menorah": F17D4,
   "menorah-fire": F17D5,
   "menu": F035C,
+  "menu-close": F1C90,
   "menu-down": F035D,
   "menu-down-outline": F06B6,
   "menu-left": F035E,
@@ -5026,7 +5074,13 @@ $mdi-icons: (
   "parking": F03E3,
   "party-popper": F1056,
   "passport": F07E3,
+  "passport-alert": F1CB8,
   "passport-biometric": F0DE1,
+  "passport-cancel": F1CB9,
+  "passport-check": F1CBA,
+  "passport-minus": F1CBB,
+  "passport-plus": F1CBC,
+  "passport-remove": F1CBD,
   "pasta": F1160,
   "patio-heater": F0F80,
   "patreon": F0882,
@@ -5236,6 +5290,7 @@ $mdi-icons: (
   "plus-network-outline": F0CBA,
   "plus-outline": F0705,
   "plus-thick": F11EC,
+  "pocket": F1CBE,
   "podcast": F0994,
   "podium": F0D25,
   "podium-bronze": F0D26,
@@ -5418,6 +5473,7 @@ $mdi-icons: (
   "quality-high": F0435,
   "quality-low": F0A0C,
   "quality-medium": F0A0D,
+  "queue-first-in-last-out": F1CAF,
   "quora": F0D29,
   "rabbit": F0907,
   "rabbit-variant": F1A61,
@@ -5666,6 +5722,7 @@ $mdi-icons: (
   "rounded-corner": F0607,
   "router": F11E2,
   "router-network": F1087,
+  "router-network-wireless": F1C97,
   "router-wireless": F0469,
   "router-wireless-off": F15A3,
   "router-wireless-settings": F0A69,
@@ -5810,10 +5867,14 @@ $mdi-icons: (
   "serial-port": F065C,
   "server": F048B,
   "server-minus": F048C,
+  "server-minus-outline": F1C98,
   "server-network": F048D,
   "server-network-off": F048E,
+  "server-network-outline": F1C99,
   "server-off": F048F,
+  "server-outline": F1C9A,
   "server-plus": F0490,
+  "server-plus-outline": F1C9B,
   "server-remove": F0491,
   "server-security": F0492,
   "set-all": F0778,
@@ -6450,6 +6511,8 @@ $mdi-icons: (
   "tag-arrow-up-outline": F1732,
   "tag-check": F1A7A,
   "tag-check-outline": F1A7B,
+  "tag-edit": F1C9C,
+  "tag-edit-outline": F1C9D,
   "tag-faces": F04FA,
   "tag-heart": F068B,
   "tag-heart-outline": F0BCF,
@@ -6725,6 +6788,7 @@ $mdi-icons: (
   "traffic-light": F052B,
   "traffic-light-outline": F182A,
   "train": F052C,
+  "train-bus": F1CC7,
   "train-car": F0BD8,
   "train-car-autorack": F1B2D,
   "train-car-box": F1B2E,
@@ -6818,6 +6882,8 @@ $mdi-icons: (
   "truck-flatbed": F1891,
   "truck-minus": F19AE,
   "truck-minus-outline": F19BD,
+  "truck-off-road": F1C9E,
+  "truck-off-road-off": F1C9F,
   "truck-outline": F129D,
   "truck-plus": F19AD,
   "truck-plus-outline": F19BC,
@@ -6886,6 +6952,7 @@ $mdi-icons: (
   "upload-off-outline": F10C7,
   "upload-outline": F0E07,
   "usb": F0553,
+  "usb-c-port": F1CBF,
   "usb-flash-drive": F129E,
   "usb-flash-drive-outline": F129F,
   "usb-port": F11F0,
@@ -6970,6 +7037,7 @@ $mdi-icons: (
   "video-plus": F09B3,
   "video-plus-outline": F01D3,
   "video-stabilization": F091B,
+  "video-standard-definition": F1CA0,
   "video-switch": F0569,
   "video-switch-outline": F0790,
   "video-vintage": F0A1C,
@@ -7120,6 +7188,9 @@ $mdi-icons: (
   "watering-can-outline": F1482,
   "watermark": F0612,
   "wave": F0F2E,
+  "wave-arrow-down": F1CB0,
+  "wave-arrow-up": F1CB1,
+  "wave-undercurrent": F1CC0,
   "waveform": F147D,
   "waves": F078D,
   "waves-arrow-left": F1859,
