--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "7.3.67" !default;
+$mdi-version:          "7.4.47" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -36,9 +36,12 @@ $mdi-icons: (
   "account-badge": F1B0A,
   "account-badge-outline": F1B0B,
   "account-box": F0006,
+  "account-box-edit-outline": F1CC8,
+  "account-box-minus-outline": F1CC9,
   "account-box-multiple": F0934,
   "account-box-multiple-outline": F100A,
   "account-box-outline": F0007,
+  "account-box-plus-outline": F1CCA,
   "account-cancel": F12DF,
   "account-cancel-outline": F12E0,
   "account-card": F1BA4,
@@ -1040,10 +1043,12 @@ $mdi-icons: (
   "book-off-outline": F1695,
   "book-open": F00BD,
   "book-open-blank-variant": F00BE,
+  "book-open-blank-variant-outline": F1CCB,
   "book-open-outline": F0B63,
   "book-open-page-variant": F05DA,
   "book-open-page-variant-outline": F15D6,
   "book-open-variant": F14F7,
+  "book-open-variant-outline": F1CCC,
   "book-outline": F0B64,
   "book-play": F0E82,
   "book-play-outline": F0E83,
@@ -1610,6 +1615,8 @@ $mdi-icons: (
   "chart-bell-curve": F0C50,
   "chart-bell-curve-cumulative": F0FA7,
   "chart-box": F154D,
+  "chart-box-multiple": F1CCD,
+  "chart-box-multiple-outline": F1CCE,
   "chart-box-outline": F154E,
   "chart-box-plus-outline": F154F,
   "chart-bubble": F05E3,
@@ -2407,6 +2414,7 @@ $mdi-icons: (
   "diamond": F0B8A,
   "diamond-outline": F0B8B,
   "diamond-stone": F01C8,
+  "diaper-outline": F1CCF,
   "dice-1": F01CA,
   "dice-1-outline": F114A,
   "dice-2": F01CB,
@@ -2518,6 +2526,7 @@ $mdi-icons: (
   "download-lock": F1320,
   "download-lock-outline": F1321,
   "download-multiple": F09E9,
+  "download-multiple-outline": F1CD0,
   "download-network": F06F4,
   "download-network-outline": F0C66,
   "download-off": F10B0,
@@ -2697,6 +2706,7 @@ $mdi-icons: (
   "ethernet": F0200,
   "ethernet-cable": F0201,
   "ethernet-cable-off": F0202,
+  "ethernet-off": F1CD1,
   "ev-plug-ccs1": F1519,
   "ev-plug-ccs2": F151A,
   "ev-plug-chademo": F151B,
@@ -3992,6 +4002,59 @@ $mdi-icons: (
   "integrated-circuit-chip": F1913,
   "invert-colors": F0301,
   "invert-colors-off": F0E4A,
+  "invoice": F1CD2,
+  "invoice-arrow-left": F1CD3,
+  "invoice-arrow-left-outline": F1CD4,
+  "invoice-arrow-right": F1CD5,
+  "invoice-arrow-right-outline": F1CD6,
+  "invoice-check": F1CD7,
+  "invoice-check-outline": F1CD8,
+  "invoice-clock": F1CD9,
+  "invoice-clock-outline": F1CDA,
+  "invoice-edit": F1CDB,
+  "invoice-edit-outline": F1CDC,
+  "invoice-export-outline": F1CDD,
+  "invoice-fast": F1CDE,
+  "invoice-fast-outline": F1CDF,
+  "invoice-import": F1CE0,
+  "invoice-import-outline": F1CE1,
+  "invoice-list": F1CE2,
+  "invoice-list-outline": F1CE3,
+  "invoice-minus": F1CE4,
+  "invoice-minus-outline": F1CE5,
+  "invoice-multiple": F1CE6,
+  "invoice-multiple-outline": F1CE7,
+  "invoice-outline": F1CE8,
+  "invoice-plus": F1CE9,
+  "invoice-plus-outline": F1CEA,
+  "invoice-remove": F1CEB,
+  "invoice-remove-outline": F1CEC,
+  "invoice-send": F1CED,
+  "invoice-send-outline": F1CEE,
+  "invoice-text": F1CEF,
+  "invoice-text-arrow-left": F1CF0,
+  "invoice-text-arrow-left-outline": F1CF1,
+  "invoice-text-arrow-right": F1CF2,
+  "invoice-text-arrow-right-outline": F1CF3,
+  "invoice-text-check": F1CF4,
+  "invoice-text-check-outline": F1CF5,
+  "invoice-text-clock": F1CF6,
+  "invoice-text-clock-outline": F1CF7,
+  "invoice-text-edit": F1CF8,
+  "invoice-text-edit-outline": F1CF9,
+  "invoice-text-fast": F1CFA,
+  "invoice-text-fast-outline": F1CFB,
+  "invoice-text-minus": F1CFC,
+  "invoice-text-minus-outline": F1CFD,
+  "invoice-text-multiple": F1CFE,
+  "invoice-text-multiple-outline": F1CFF,
+  "invoice-text-outline": F1D00,
+  "invoice-text-plus": F1D01,
+  "invoice-text-plus-outline": F1D02,
+  "invoice-text-remove": F1D03,
+  "invoice-text-remove-outline": F1D04,
+  "invoice-text-send": F1D05,
+  "invoice-text-send-outline": F1D06,
   "iobroker": F12E8,
   "ip": F0A5F,
   "ip-network": F0A60,
@@ -4629,10 +4692,16 @@ $mdi-icons: (
   "motorbike-off": F1B16,
   "mouse": F037D,
   "mouse-bluetooth": F098B,
+  "mouse-left-click": F1D07,
+  "mouse-left-click-outline": F1D08,
   "mouse-move-down": F1550,
   "mouse-move-up": F1551,
   "mouse-move-vertical": F1552,
   "mouse-off": F037E,
+  "mouse-outline": F1D09,
+  "mouse-right-click": F1D0A,
+  "mouse-right-click-outline": F1D0B,
+  "mouse-scroll-wheel": F1D0C,
   "mouse-variant": F037F,
   "mouse-variant-off": F0380,
   "move-resize": F0655,
@@ -5420,6 +5489,7 @@ $mdi-icons: (
   "progress-question": F1522,
   "progress-star": F1788,
   "progress-star-four-points": F1C3D,
+  "progress-tag": F1D0D,
   "progress-upload": F0998,
   "progress-wrench": F0CBD,
   "projector": F042E,
@@ -6414,6 +6484,7 @@ $mdi-icons: (
   "swap-horizontal-bold": F0BCD,
   "swap-horizontal-circle": F0FE1,
   "swap-horizontal-circle-outline": F0FE2,
+  "swap-horizontal-hidden": F1D0E,
   "swap-horizontal-variant": F08C1,
   "swap-vertical": F04E2,
   "swap-vertical-bold": F0BCE,
@@ -6928,6 +6999,7 @@ $mdi-icons: (
   "umbrella-closed-outline": F13E2,
   "umbrella-closed-variant": F13E1,
   "umbrella-outline": F054B,
+  "underwear-outline": F1D0F,
   "undo": F054C,
   "undo-variant": F054D,
   "unfold-less-horizontal": F054E,
@@ -6943,9 +7015,14 @@ $mdi-icons: (
   "unreal": F09B1,
   "update": F06B0,
   "upload": F0552,
+  "upload-box": F1D10,
+  "upload-box-outline": F1D11,
+  "upload-circle": F1D12,
+  "upload-circle-outline": F1D13,
   "upload-lock": F1373,
   "upload-lock-outline": F1374,
   "upload-multiple": F083D,
+  "upload-multiple-outline": F1D14,
   "upload-network": F06F6,
   "upload-network-outline": F0CD8,
   "upload-off": F10C6,
@@ -7209,6 +7286,9 @@ $mdi-icons: (
   "weather-hurricane-outline": F1C78,
   "weather-lightning": F0593,
   "weather-lightning-rainy": F067E,
+  "weather-moonset": F1D15,
+  "weather-moonset-down": F1D16,
+  "weather-moonset-up": F1D17,
   "weather-night": F0594,
   "weather-night-partly-cloudy": F0F31,
   "weather-partly-cloudy": F0595,
